Fixed spacing issues on multiple payments listed.

--- a/src/components/Payment/Payment.scss
+++ b/src/components/Payment/Payment.scss
@@ -2,7 +2,7 @@
 
 .Payment {
   width: 100%;
-  height: 3.063rem;
+  height: 3.438;
   display: grid;
   grid-template-columns: auto 0.826rem;
   border-bottom: 1px solid $light-gray;
